Desktop version done

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
   <body class="grid pl-c-center block-spacing">
-    <main class="container container--large flow-spacing">
-      <section class="product__info flow-spacing">
-        <article class="flow-spacing">
+    <main class="container container--large">
+      <section class="product__info">
+        <article>
           <h1 class="h1">10,000+ of our users love our products.</h1>
-          <p>
+          <p class="info__text">
             We only provide great products combined with excellent customer
             service. See what our satisfied customers are saying about our
             services.
